Fix typo in job page Randomize team order

--- a/job.html
+++ b/job.html
@@ -79,7 +79,7 @@ class: job
                                          data-target="#rejoignez-nous-modal">Toi aussi deviens Scaler</a></h1>
                     <p><a id="rejoignez-nous-2" href="#rejoignez-nous" data-toggle="modal"
                           data-target="#rejoignez-nous-modal">Voici, les profils que nous cherchons. Si tu as de bonnes
-                        idées et que tu penses pouvoir nous aider. N'hésite plus, dis le nous.</a></p>
+                        idées et que tu penses pouvoir nous aider, n'hésite plus, dis le nous.</a></p>
                 </div>
             </div>
             <div class="row">
