Rework profiles short pitch

--- a/job.html
+++ b/job.html
@@ -78,8 +78,9 @@ class: job
                     <h1 class="title"><a id="rejoignez-nous" href="#rejoignez-nous" data-toggle="modal"
                                          data-target="#rejoignez-nous-modal">Toi aussi deviens Scaler</a></h1>
                     <p><a id="rejoignez-nous-2" href="#rejoignez-nous" data-toggle="modal"
-                          data-target="#rejoignez-nous-modal">Voici, les profils que nous cherchons. Si tu as de bonnes
-                        idées et que tu penses pouvoir nous aider, n'hésite plus, dis le nous.</a></p>
+                          data-target="#rejoignez-nous-modal">Si tu as de bonnes
+                        idées et que tu participer à notre aventure, vite dis le nous.
+                    Voici, les profils que nous cherchons : </a></p>
                 </div>
             </div>
             <div class="row">
