Fix typos in job page

--- a/job.html
+++ b/job.html
@@ -32,14 +32,14 @@ class: job
                         <li><p>
                             <b>Faire vivre sa passion</b>, avec d'autres fous de cloud, d'automatisation, bref de
                             développement
-                            d'infrastructure pour qui mettre en production le vendredi est la norme.
+                            d'infrastructures pour qui mettre en production le vendredi est la norme.
                         </p>
                         </li>
                         <li><p>
-                            <b>Partager</b>, son aventure et son expérience à toutes les occasions. Une fois par mois
+                            <b>Partager</b> son aventure et son expérience à toutes les occasions. Une fois par mois
                             lors du
                             WeShare toute l'équipe se retrouve pendant une journée pour échanger, se former et s'amuser.
-                            Mais c'est aussi, écrire des articles, suivre et donner des conférences et participer à des
+                            Mais c'est aussi écrire des articles, suivre et donner des conférences et participer à des
                             meetups.
                         </p>
                         </li>
@@ -55,13 +55,13 @@ class: job
                         </p>
                         </li>
                         <li><p>
-                            <b>Décider</b>, de la destinée de sa société. Nous avons une culture d'entreprise forte de
+                            <b>Décider</b> de la destinée de sa société. Nous avons une culture d'entreprise forte de
                             transparence et de collaboration. Parce que nous n'avons pas la prétention d'être parfait,
                             nous
                             cherchons tous ensemble à nous <b>améliorer</b> et plus généralement, à <b>améliorer la vie
                             chez
                             Wescale</b>.
-                            Chacun a son mot à dire et tous le monde est écouté. Notre but est de grandir et de nous
+                            Chacun a son mot à dire et tout le monde est écouté. Notre but est de grandir et de nous
                             épanouir
                             ensemble.
                         </p>
@@ -79,7 +79,7 @@ class: job
                                          data-target="#rejoignez-nous-modal">Toi aussi deviens Scaler</a></h1>
                     <p><a id="rejoignez-nous-2" href="#rejoignez-nous" data-toggle="modal"
                           data-target="#rejoignez-nous-modal">Si tu as de bonnes
-                        idées et que tu participer à notre aventure, vite dis le nous.
+                        idées et que tu souhaites participer à notre aventure, dis le nous vite.
                     Voici, les profils que nous cherchons : </a></p>
                 </div>
             </div>
@@ -133,7 +133,7 @@ class: job
                             Tu es un pro du système, de l'automatisation, du monitoring et du réseau. Tu as le
                             goût des
                             prods bien huilées et sécurisées. Tu aimes les architectures qui en imposent.
-                            Viens opèrer et faire évoluer les solutions Cloud en lien direct avec les développeurs.
+                            Viens opérer et faire évoluer les solutions Cloud en lien direct avec les développeurs.
                         </a>
                     </p>
                 </div>
