--- a/a-propos.html
+++ b/a-propos.html
@@ -93,7 +93,7 @@ class: a-propos
                             <div class="equipe-mask"></div>
                             <div class="equipe-name">
                                 {% if we.job %}
-                                <a href="job.html">
+                                <a href="recrutement.html">
                                 {% endif %}
                                 <h2>{{we.name}}</h2>
                                 <h3>{{we.title}}</h3>
