--- a/recrutement.html
+++ b/recrutement.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Job - Wescale - Cloud expert
+title: Recrutement - Wescale - Cloud expert
 class: job
 ---
 <div class="content">
