Add jobs@wescale.fr to carreer page

--- a/recrutement.html
+++ b/recrutement.html
@@ -149,6 +149,7 @@ class: job
                             width="52" height="44" /><br/>
                             Allez viens, on est bien !
                         </a>
+                        <a href="mailto:jobs@wescale.fr">jobs@wescale.fr</a>
                     </p>
                 </div>
 
