Add mail icon before mail address

--- a/recrutement.html
+++ b/recrutement.html
@@ -149,7 +149,8 @@ class: job
                             width="52" height="44" /><br/>
                             Allez viens, on est bien !
                         </a>
-                        <a href="mailto:jobs@wescale.fr">jobs@wescale.fr</a>
+                        <br>
+                        <a href="mailto:jobs@wescale.fr"><i class="fa fa-envelope"></i>jobs@wescale.fr</a>
                     </p>
                 </div>
 
