Fix pitch formation block size

--- a/formations.html
+++ b/formations.html
@@ -29,7 +29,7 @@ class: formations
 
               <h2>{{formation.title}} - <em>{{ formation.duree }}</em></h2>
 
-              <p>{{ formation.pitch }}</p>
+              <p class="formations-pitch">{{ formation.pitch }}</p>
 
               <a href="{{ formation.url | relative_url}}" class="button">En savoir plus</a>
               </div>
