--- a/formations.html
+++ b/formations.html
@@ -10,6 +10,22 @@ class: formations
         <div class="container">
           <div class="row">
             <div class="col-md-12">
+              <h1 class="title">Nos prochaines formations</h1>
+            </div>
+          </div>
+         <div class="row">
+            <div class="col-md-4">
+                <a href="/formations/Ansible.html"><img src="/image/formation-ansible.png"></a>
+            </div>
+            <div class="col-md-4">
+              <a href="/formations/Docker-Kubernetes.html"><img src="/image/formation-kubernetes.png"></a>
+            </div>
+            <div class="col-md-4">
+              <a href="/formations/Microservices.html"><img src="/image/formation-microservices.png"></a>
+            </div>
+          </div>
+            <div class="row">
+            <div class="col-md-12">
               <h1 class="title">Découvrez nos formations</h1>
             </div>
           </div>
