--- a/formations.html
+++ b/formations.html
@@ -15,13 +15,13 @@ class: formations
           </div>
          <div class="row">
             <div class="col-md-4">
-                <a href="/formations/Ansible.html"><img src="/images/formation-ansible.png"></a>
+                <a href="{{"/formations/Ansible.html" | relative_url }}"><img src="{{"/images/formation-ansible.png" | relative_url }}"></a>
             </div>
             <div class="col-md-4">
-              <a href="/formations/Docker-Kubernetes.html"><img src="/images/formation-kubernetes.png"></a>
+              <a href="{{"/formations/Docker-Kubernetes.html" | relative_url }}"><img src="{{"/images/formation-kubernetes.png" | relative_url }}"></a>
             </div>
             <div class="col-md-4">
-              <a href="/formations/Microservices.html"><img src="/images/formation-microservices.png"></a>
+              <a href="{{"/formations/Microservices.html" | relative_url }}"><img src="{{"/images/formation-microservices.png" | relative_url }}"></a>
             </div>
           </div>
             <div class="row">
