add style div class

--- a/formations.html
+++ b/formations.html
@@ -14,13 +14,13 @@ class: formations
             </div>
           </div>
          <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4" style="text-align:center;">
                 <a href="{{"/formations/Ansible.html" | relative_url }}"><img src="{{"/images/formations/formation-ansible.png" | relative_url }}"></a>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4" style="text-align:center;">
               <a href="{{"/formations/Docker-Kubernetes.html" | relative_url }}"><img src="{{"/images/formations/formation-kubernetes.png" | relative_url }}"></a>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4" style="text-align:center;">
               <a href="{{"/formations/Microservices.html" | relative_url }}"><img src="{{"/images/formations/formation-microservices.png" | relative_url }}"></a>
             </div>
           </div>
