Update mentions to match new office and market comm chief

--- a/mentions.html
+++ b/mentions.html
@@ -16,9 +16,9 @@ class: mentions
             <div class="col-md-12">
                 <ul>
                     <li>Raison sociale : WeScale SAS</li>
-                    <li>Le siège social : 10-12 avenue de l’Arche de la Défense Colisée Faubourg de l’Arche / 92 419 Courbevoie Cedex</li>
-                    <li>Numéro de téléphone : +33 (0)1 85 08 18 81</li>
-                    <li>Responsable de publication : Mme Margot Robine / contact@wescale.fr</li>
+                    <li>Le siège social : 16 place de l’Iris, Tour CB21 - Esplanade Business Centre 92400 COURBEVOIE</li>
+                    <li>Numéro de téléphone : +33 (0)1 83 75 05 26</li>
+                    <li>Responsable de publication : Mr Girondeau Johan / contact@wescale.fr</li>
                     <li>Représentant légal de la structure : M. Séven Le Mesle</li>
                     <li>Capital social : 51 204,81 €</li>
                     <li>Numéro RCS : 811 315 167 R.C.S. Nanterre</li>
