Change url and agenda image

--- a/formations.html
+++ b/formations.html
@@ -18,7 +18,7 @@ class: formations
                 <a href="{{"/formations/Ansible.html" | relative_url }}"><img width="350" src="{{"/images/formations/formation-ansible-test.png" | relative_url }}"></a>
             </div>
             <div class="col-md-4" style="text-align:center;">
-              <a href="{{"/formations/Docker-Kubernetes.html" | relative_url }}"><img width="350" src="{{"/images/formations/formation-docker-kubernetes-test.png" | relative_url }}"></a>
+              <a href="{{"/formations/Kubernetes.html" | relative_url }}"><img width="350" src="{{"/images/formations/formation-kubernetes.png" | relative_url }}"></a>
             </div>
             <div class="col-md-4" style="text-align:center;">
               <a href="{{"/formations/Microservices.html" | relative_url }}"><img width="350" src="{{"/images/formations/formation-microservices-test.png" | relative_url }}"></a>
