Bounce to welcomekit job page

--- a/recrutement.html
+++ b/recrutement.html
@@ -75,15 +75,20 @@ class: job
         <div class="container job-profils">
             <div class="row">
                 <div class="col-xs-12">
-                    <h1 class="title"><a id="rejoignez-nous" href="#rejoignez-nous" data-toggle="modal"
+                    <a href="https://wescale.welcomekit.co" class="button">
+                        <!--<i class="fa fa-download" aria-hidden="true"></i>-->Découvrir nos offres</a>
+
+                   <!-- <h1 class="title"><a id="rejoignez-nous" href="#rejoignez-nous" data-toggle="modal"
                                          data-target="#rejoignez-nous-modal">Toi aussi deviens Scaler</a></h1>
                     <p><a id="rejoignez-nous-2" href="#rejoignez-nous" data-toggle="modal"
                           data-target="#rejoignez-nous-modal">Si tu as de bonnes
                         idées et que tu souhaites participer à notre aventure, dis le nous vite.
-                    Voici, les profils que nous cherchons : </a></p>
+                    Voici, les profils que nous cherchons : </a></p>-->
                 </div>
             </div>
-            <div class="row">
+        </div>
+    </section>
+    <!--        <div class="row">
                 <div class="col-xs-12 col-md-4">
                     <h2>
                         <a id="rejoignez-nous-6" href="#rejoignez-nous" data-toggle="modal"
@@ -157,5 +162,5 @@ class: job
             </div>
 
         </div>
-    </section>
+    </section>-->
 </div>
