--- a/recrutement.html
+++ b/recrutement.html
@@ -75,7 +75,7 @@ class: job
         <div class="container job-profils">
             <div class="row">
                 <div class="col-xs-12">
-                    <a href="https://wescale.welcomekit.co" class="button">
+                    <a href="https://wescale.welcomekit.co" class="job-button">
                         <!--<i class="fa fa-download" aria-hidden="true"></i>-->Découvrir nos offres</a>
 
                    <!-- <h1 class="title"><a id="rejoignez-nous" href="#rejoignez-nous" data-toggle="modal"
