Enlarge job-button

--- a/recrutement.html
+++ b/recrutement.html
@@ -76,6 +76,7 @@ class: job
             <div class="row">
                 <div class="col-xs-12">
                     <a href="https://wescale.welcomekit.co" class="job-button" >
+                        <i class="fa fa-external-link" aria-hidden="true"></i>
                         <!--<i class="fa fa-download" aria-hidden="true"></i>-->Découvrir nos offres</a>
 
                    <!-- <h1 class="title"><a id="rejoignez-nous" href="#rejoignez-nous" data-toggle="modal"
