Add a demo image in job page

--- a/recrutement.html
+++ b/recrutement.html
@@ -69,6 +69,11 @@ class: job
                     </ul>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-12 job-family">
+                    &nbsp;
+                </div>
+            </div>
         </div>
     </section>
     <section>
