--- a/recrutement.html
+++ b/recrutement.html
@@ -25,11 +25,14 @@ class: job
                     </p>
                 </div>
             </div>
+        </div>
+        <div class="container job-family">
               <div class="row">
-                <div class="col-md-12 job-family">
+                <div class="col-md-12 job-spacer">
                     &nbsp;
                 </div>
             </div>
+        </div>
             <div class="row">
                 <div class="col-md-offset-1 col-md-10 history">
                     <h2>Rejoindre Wescale c'est :</h2>
