Fix image cover property in job page

--- a/recrutement.html
+++ b/recrutement.html
@@ -4,7 +4,7 @@ title: Recrutement - Wescale - Cloud expert
 class: job
 ---
 <div class="content">
-    <section class="">
+    <section id="recrutement-top" class="">
         <div class="container">
 
 
@@ -19,20 +19,26 @@ class: job
                 <div class="col-md-offset-1 col-md-10 history">
 
                     <p>
-                        WeScale en quelques mots, c’est à la fois une start-up et une société de conseil, dédiée au
-                        cloud computing.
+                        WeScale en quelques mots, c’est une société de conseil dédiée au
+                        cloud computing, avec un esprit startup !
                         Nous sommes une équipe de passionnés (chacun par ses sujets, qu’ils soient techniques ou non).
                     </p>
                 </div>
             </div>
         </div>
-        <div class="container job-family">
+    </section>
+</div>
+<section class="job-family">
+        <div class="container">
               <div class="row">
                 <div class="col-md-12 job-spacer">
                     &nbsp;
                 </div>
             </div>
         </div>
+</section>
+<section>
+    <div class="container">
             <div class="row">
                 <div class="col-md-offset-1 col-md-10 history">
                     <h2>Rejoindre Wescale c'est :</h2>
@@ -172,4 +178,3 @@ class: job
 
         </div>
     </section>-->
-</div>
