Use new banner image

--- a/recrutement.html
+++ b/recrutement.html
@@ -89,10 +89,14 @@ class: job
         <div class="container job-profils">
             <div class="row">
                 <div class="col-xs-12">
-                    <a href="https://wescale.welcomekit.co" class="job-button" >
-                        <i class="fa fa-external-link" aria-hidden="true"></i>
-                        <!--<i class="fa fa-download" aria-hidden="true"></i>-->Découvrir nos offres</a>
-
+                    <a href="https://wescale.welcomekit.co" class="job-button">
+                        <div class="job-bg">
+                            <p>
+                                <i class="fa fa-external-link" aria-hidden="true"></i>
+                            <!--<i class="fa fa-download" aria-hidden="true"></i>-->Découvrir nos offres
+                            </p>
+                        </div>
+                        </a>
                    <!-- <h1 class="title"><a id="rejoignez-nous" href="#rejoignez-nous" data-toggle="modal"
                                          data-target="#rejoignez-nous-modal">Toi aussi deviens Scaler</a></h1>
                     <p><a id="rejoignez-nous-2" href="#rejoignez-nous" data-toggle="modal"
