Test a new layout for job page

--- a/recrutement.html
+++ b/recrutement.html
@@ -83,6 +83,71 @@ class: job
                     </ul>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-4 .visible-lg-* image-holder-left">
+                    <div class="welcome-box">
+
+                    </div>
+                </div>
+                <div class="col-md-8 content clearfix">
+                    <div class="row">
+                        <div class="col-md-6">
+                        <div style="float: left;">
+                            <div class="icon-holder"> <i class="fa fa-heartbeat" aria-hidden="true"></i> </div>
+                            <div class="icon-text">
+                                <h2>Faire vivre sa passion,</h2>
+                                    <p>avec d'autres fous de cloud, d'automatisation, bref de
+                                    développement
+                                    d'infrastructures pour qui mettre en production le vendredi est la norme.
+                            </p></div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="icon-holder"> <i class="fa fa-share-alt" aria-hidden="true"></i> </div>
+                        <div class="icon-text">
+                            <h2>Partager</h2>
+                                <p>son aventure et son expérience à toutes les occasions. Une fois par mois
+                                lors du
+                                WeShare toute l'équipe se retrouve pendant une journée pour échanger, se former et s'amuser.
+                                Mais c'est aussi écrire des articles, suivre et donner des conférences et participer à des
+                                meetups.
+                        </p></div>
+                    </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="icon-holder"> <i class="fa fa-smile-o" aria-hidden="true"></i> </div>
+                            <div class="icon-text">
+                                <h2>S'amuser !</h2>
+                                    <p>Nous passons suffisament de temps dans notre vie à
+                                    travailler. Pas question pour nous de le passer à être triste et soucieux. Nous nous
+                                    retrouvons
+                                    régulièrement lors des <b>WeParty</b> pour découvrir de nouveaux bars insolites de la
+                                    capitale.
+                                    Une fois par an, nous nous réunissons aussi en séminaire pour développer de nouvelles
+                                    compétences
+                                    avec les <b>GO de Marrakech</b> et d'ailleurs.
+                            </p></div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="icon-holder"> <i class="fa fa-magic" aria-hidden="true"></i> </div>
+                            <div class="icon-text">
+                                <h2>Décider</h2>
+                                    <p>de la destinée de sa société. Nous avons une culture d'entreprise forte de
+                                    transparence et de collaboration. Parce que nous n'avons pas la prétention d'être parfait,
+                                    nous
+                                    cherchons tous ensemble à nous <b>améliorer</b> et plus généralement, à <b>améliorer la vie
+                                    chez
+                                    Wescale</b>.
+                                    Chacun a son mot à dire et tout le monde est écouté. Notre but est de grandir et de nous
+                                    épanouir
+                                    ensemble.
+                            </p></div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </section>
     <section>
