Test a new layout for job page - bis

--- a/recrutement.html
+++ b/recrutement.html
@@ -17,7 +17,6 @@ class: job
 
             <div class="row">
                 <div class="col-md-offset-1 col-md-10 history">
-
                     <p>
                         WeScale en quelques mots, c’est une société de conseil dédiée au
                         cloud computing, avec un esprit startup !
@@ -40,50 +39,6 @@ class: job
 <section>
     <div class="container">
             <div class="row">
-                <div class="col-md-offset-1 col-md-10 history">
-                    <h2>Rejoindre Wescale c'est :</h2>
-                    <ul>
-                        <li><p>
-                            <b>Faire vivre sa passion</b>, avec d'autres fous de cloud, d'automatisation, bref de
-                            développement
-                            d'infrastructures pour qui mettre en production le vendredi est la norme.
-                        </p>
-                        </li>
-                        <li><p>
-                            <b>Partager</b> son aventure et son expérience à toutes les occasions. Une fois par mois
-                            lors du
-                            WeShare toute l'équipe se retrouve pendant une journée pour échanger, se former et s'amuser.
-                            Mais c'est aussi écrire des articles, suivre et donner des conférences et participer à des
-                            meetups.
-                        </p>
-                        </li>
-                        <li><p>
-                            <b>S'amuser !</b> Nous passons suffisament de temps dans notre vie à
-                            travailler. Pas question pour nous de le passer à être triste et soucieux. Nous nous
-                            retrouvons
-                            régulièrement lors des <b>WeParty</b> pour découvrir de nouveaux bars insolites de la
-                            capitale.
-                            Une fois par an, nous nous réunissons aussi en séminaire pour développer de nouvelles
-                            compétences
-                            avec les <b>GO de Marrakech et d'ailleurs</b>.
-                        </p>
-                        </li>
-                        <li><p>
-                            <b>Décider</b> de la destinée de sa société. Nous avons une culture d'entreprise forte de
-                            transparence et de collaboration. Parce que nous n'avons pas la prétention d'être parfait,
-                            nous
-                            cherchons tous ensemble à nous <b>améliorer</b> et plus généralement, à <b>améliorer la vie
-                            chez
-                            Wescale</b>.
-                            Chacun a son mot à dire et tout le monde est écouté. Notre but est de grandir et de nous
-                            épanouir
-                            ensemble.
-                        </p>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="row">
                 <div class="col-md-4 .visible-lg-* image-holder-left">
                     <div class="welcome-box">
 
@@ -91,11 +46,12 @@ class: job
                 </div>
                 <div class="col-md-8 content clearfix">
                     <div class="row">
+                        <h2 style="text-align: center">Rejoindre Wescale c'est :</h2>
                         <div class="col-md-6">
                         <div style="float: left;">
                             <div class="icon-holder"> <i class="fa fa-heartbeat" aria-hidden="true"></i> </div>
                             <div class="icon-text">
-                                <h2>Faire vivre sa passion,</h2>
+                                <h3>Faire vivre sa passion,</h3>
                                     <p>avec d'autres fous de cloud, d'automatisation, bref de
                                     développement
                                     d'infrastructures pour qui mettre en production le vendredi est la norme.
@@ -105,7 +61,7 @@ class: job
                     <div class="col-md-6">
                         <div class="icon-holder"> <i class="fa fa-share-alt" aria-hidden="true"></i> </div>
                         <div class="icon-text">
-                            <h2>Partager</h2>
+                            <h3>Partager</h3>
                                 <p>son aventure et son expérience à toutes les occasions. Une fois par mois
                                 lors du
                                 WeShare toute l'équipe se retrouve pendant une journée pour échanger, se former et s'amuser.
@@ -118,7 +74,7 @@ class: job
                         <div class="col-md-6">
                             <div class="icon-holder"> <i class="fa fa-smile-o" aria-hidden="true"></i> </div>
                             <div class="icon-text">
-                                <h2>S'amuser !</h2>
+                                <h3>S'amuser !</h3>
                                     <p>Nous passons suffisament de temps dans notre vie à
                                     travailler. Pas question pour nous de le passer à être triste et soucieux. Nous nous
                                     retrouvons
@@ -132,7 +88,7 @@ class: job
                         <div class="col-md-6">
                             <div class="icon-holder"> <i class="fa fa-magic" aria-hidden="true"></i> </div>
                             <div class="icon-text">
-                                <h2>Décider</h2>
+                                <h3>Décider</h3>
                                     <p>de la destinée de sa société. Nous avons une culture d'entreprise forte de
                                     transparence et de collaboration. Parce que nous n'avons pas la prétention d'être parfait,
                                     nous
@@ -153,14 +109,10 @@ class: job
     <section>
         <div class="container job-profils">
             <div class="row">
-                <div class="col-xs-12">
-                    <a href="https://wescale.welcomekit.co" class="job-button">
-                        <div class="job-bg">
-                            <p>
+                <div class="col-xs-12" style="padding-bottom: 20px;">
+                    <a href="https://wescale.welcomekit.co" class="job-button" style="padding: 10px;">
                                 <i class="fa fa-external-link" aria-hidden="true"></i>
                             <!--<i class="fa fa-download" aria-hidden="true"></i>-->Découvrir nos offres
-                            </p>
-                        </div>
                         </a>
                    <!-- <h1 class="title"><a id="rejoignez-nous" href="#rejoignez-nous" data-toggle="modal"
                                          data-target="#rejoignez-nous-modal">Toi aussi deviens Scaler</a></h1>
