--- a/recrutement.html
+++ b/recrutement.html
@@ -19,9 +19,21 @@ class: job
                 <div class="col-md-offset-1 col-md-10 history">
                     <p>
                         WeScale en quelques mots, c’est une société de conseil dédiée au
-                        cloud computing, avec un esprit startup !
-                        Nous sommes une équipe de passionnés (chacun par ses sujets, qu’ils soient techniques ou non).
+                        cloud computing, avec un esprit startup !<br>
+                        Nous sommes réunis par la passion et l'envie de partager nos connaissances à travers nos
+                        missions, nos publications (blog, TechTrends), nos conférences, bref notre travail quotidien.
                     </p>
+                    <p>
+                        Rejoindre la WeFamily, c'est participer à une aventure humaine, relever des défis, apprendre
+                        chaque jour, mais aussi s'amuser.
+                    </p>
+                     <p class="more">
+                    <a href="#" id="nous-rejoindre">
+                        <img src="{{"/images/more-black.png" | relative_url }}" alt="Nous rejoindre" width="52"
+                        height="44" /><br/>
+                        En savoir plus
+                    </a>
+                </p>
                 </div>
             </div>
         </div>
@@ -36,17 +48,17 @@ class: job
             </div>
         </div>
 </section>
-<section>
-    <div class="container">
-            <div class="row">
-                <div class="col-md-4 .visible-lg-* image-holder-left">
+<section class="side-image" id="rejoindre-wescale">
+                <div class="col-md-4 visible-lg-block visible-md-block image-holder-left">
                     <div class="welcome-box">
 
                     </div>
                 </div>
-                <div class="col-md-8 content clearfix">
+    <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-4 col-xs-12">
                     <div class="row">
-                        <h2 style="text-align: center">Rejoindre Wescale c'est :</h2>
+                        <h2  style="text-align: center">Rejoindre Wescale c'est :</h2>
                         <div class="col-md-6">
                         <div style="float: left;">
                             <div class="icon-holder"> <i class="fa fa-heartbeat" aria-hidden="true"></i> </div>
@@ -58,7 +70,7 @@ class: job
                             </p></div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-xs-12">
                         <div class="icon-holder"> <i class="fa fa-share-alt" aria-hidden="true"></i> </div>
                         <div class="icon-text">
                             <h3>Partager</h3>
@@ -71,21 +83,21 @@ class: job
                     </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-6 col-xs-12">
                             <div class="icon-holder"> <i class="fa fa-smile-o" aria-hidden="true"></i> </div>
                             <div class="icon-text">
                                 <h3>S'amuser !</h3>
                                     <p>Nous passons suffisament de temps dans notre vie à
                                     travailler. Pas question pour nous de le passer à être triste et soucieux. Nous nous
                                     retrouvons
-                                    régulièrement lors des <b>WeParty</b> pour découvrir de nouveaux bars insolites de la
+                                    régulièrement lors des <b>WeFest</b> pour découvrir de nouveaux bars insolites de la
                                     capitale.
                                     Une fois par an, nous nous réunissons aussi en séminaire pour développer de nouvelles
                                     compétences
                                     avec les <b>GO de Marrakech</b> et d'ailleurs.
                             </p></div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 col-xs-12">
                             <div class="icon-holder"> <i class="fa fa-magic" aria-hidden="true"></i> </div>
                             <div class="icon-text">
                                 <h3>Décider</h3>
@@ -96,13 +108,11 @@ class: job
                                     chez
                                     Wescale</b>.
                                     Chacun a son mot à dire et tout le monde est écouté. Notre but est de grandir et de nous
-                                    épanouir
-                                    ensemble.
+                                    épanouir ensemble.
                             </p></div>
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </section>
@@ -111,91 +121,8 @@ class: job
             <div class="row">
                 <div class="col-xs-12" style="padding-bottom: 20px;">
                     <a href="https://wescale.welcomekit.co" class="job-button" style="padding: 10px;">
-                                <i class="fa fa-external-link" aria-hidden="true"></i>
-                            <!--<i class="fa fa-download" aria-hidden="true"></i>-->Découvrir nos offres
-                        </a>
-                   <!-- <h1 class="title"><a id="rejoignez-nous" href="#rejoignez-nous" data-toggle="modal"
-                                         data-target="#rejoignez-nous-modal">Toi aussi deviens Scaler</a></h1>
-                    <p><a id="rejoignez-nous-2" href="#rejoignez-nous" data-toggle="modal"
-                          data-target="#rejoignez-nous-modal">Si tu as de bonnes
-                        idées et que tu souhaites participer à notre aventure, dis le nous vite.
-                    Voici, les profils que nous cherchons : </a></p>-->
+                        <i class="fa fa-external-link" aria-hidden="true"></i> Découvrir nos offres</a>
                 </div>
             </div>
         </div>
     </section>
-    <!--        <div class="row">
-                <div class="col-xs-12 col-md-4">
-                    <h2>
-                        <a id="rejoignez-nous-6" href="#rejoignez-nous" data-toggle="modal"
-                           data-target="#rejoignez-nous-modal">
-                            Cloud <span class="bold">Designer</span>
-                        </a></h2>
-                    <a id="rejoignez-nous-3" href="#rejoignez-nous" data-toggle="modal"
-                       data-target="#rejoignez-nous-modal">
-                        <img src="{{"/images/cloud-designer-black.png"| relative_url }}" alt="Cloud Designer" /></a>
-                    <p><a id="rejoignez-nous-7" href="#rejoignez-nous" data-toggle="modal"
-                          data-target="#rejoignez-nous-modal">
-                        Tu as une appétence pour l’analyse des besoins business et des enjeux stratégiques, de
-                        solides bases techniques Cloud pour être à même de proposer des processus et des architectures
-                        réalistes, bâties pour tenir et durer.</a></p>
-                </div>
-                <div class="col-xs-12 col-md-4">
-                    <h2>
-                        <a id="rejoignez-nous-8" href="#rejoignez-nous" data-toggle="modal"
-                           data-target="#rejoignez-nous-modal">
-                            Cloud <span class="bold">Builder</span
-                        ></a>
-                    </h2>
-                    <a id="rejoignez-nous-4" href="#rejoignez-nous" data-toggle="modal"
-                       data-target="#rejoignez-nous-modal">
-                        <img src="{{"/images/cloud-builder-black.png"| relative_url }}" alt="Cloud Builder" /></a>
-                    <p>
-                        <a id="rejoignez-nous-9" href="#rejoignez-nous" data-toggle="modal"
-                           data-target="#rejoignez-nous-modal">
-                            Tu connais les briques utiles au fonctionnement d'un SI ou d'une usine logicielle. Tu
-                            aimes les
-                            approches orientées services. Tu es bilingues DevOps. Viens construire et mettre en
-                            place des solutions Cloud avec nous.</a></p>
-                </div>
-                <div class="col-xs-12 col-md-4">
-                    <h2>
-                        <a id="rejoignez-nous-10" href="#rejoignez-nous" data-toggle="modal"
-                           data-target="#rejoignez-nous-modal">
-                            Cloud <span class="bold">Runner</span>
-                        </a>
-                    </h2>
-                    <a id="rejoignez-nous-5" href="#rejoignez-nous" data-toggle="modal"
-                       data-target="#rejoignez-nous-modal">
-                        <img src="{{"/images/cloud-runner-black.png"| relative_url }}" alt="Cloud Runner" /></a>
-                    <p>
-                        <a id="rejoignez-nous-11" href="#rejoignez-nous" data-toggle="modal"
-                           data-target="#rejoignez-nous-modal">
-                            Tu es un pro du système, de l'automatisation, du monitoring et du réseau. Tu as le
-                            goût des
-                            prods bien huilées et sécurisées. Tu aimes les architectures qui en imposent.
-                            Viens opérer et faire évoluer les solutions Cloud en lien direct avec les développeurs.
-                        </a>
-                    </p>
-                </div>
-
-
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <p class="more">
-                        <a href="#rejoins-nous" id="rejoins-nous" data-toggle="modal"
-                           data-target="#rejoignez-nous-modal">
-                            <img src="{{"/images/more-black.png" | relative_url }}" alt="Allez viens, on est bien !"
-                            width="52" height="44" /><br/>
-                            Allez viens, on est bien !
-                        </a>
-                    </p>
-                        <a href="mailto:jobs@wescale.fr"><i class="fa fa-envelope"></i> jobs@wescale.fr</a>
-                </div>
-
-                {% include wescale-recrute.html %}
-            </div>
-
-        </div>
-    </section>-->
