Use WeTribu wording

--- a/recrutement.html
+++ b/recrutement.html
@@ -24,7 +24,7 @@ class: job
                         missions, nos publications (blog, TechTrends), nos conférences, bref notre travail quotidien.
                     </p>
                     <p>
-                        Rejoindre la WeFamily, c'est participer à une aventure humaine, relever des défis, apprendre
+                        Rejoindre la WeTribu, c'est participer à une aventure humaine, relever des défis, apprendre
                         chaque jour, mais aussi s'amuser.
                     </p>
                      <p class="more">
