Finalize new job page

--- a/recrutement.html
+++ b/recrutement.html
@@ -90,7 +90,7 @@ class: job
                                     <p>Nous passons suffisament de temps dans notre vie à
                                     travailler. Pas question pour nous de le passer à être triste et soucieux. Nous nous
                                     retrouvons
-                                    régulièrement lors des <b>WeFest</b> pour découvrir de nouveaux bars insolites de la
+                                    régulièrement lors des <b>WeNight</b> pour découvrir de nouveaux bars insolites de la
                                     capitale.
                                     Une fois par an, nous nous réunissons aussi en séminaire pour développer de nouvelles
                                     compétences
@@ -112,16 +112,12 @@ class: job
                             </p></div>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section>
-        <div class="container job-profils">
-            <div class="row">
-                <div class="col-xs-12" style="padding-bottom: 20px;">
-                    <a href="https://wescale.welcomekit.co" class="job-button" style="padding: 10px;">
-                        <i class="fa fa-external-link" aria-hidden="true"></i> Découvrir nos offres</a>
+                    <div class="row job-profils">
+                        <div class="col-md-6 col-xs-12" style="padding-bottom: 20px;text-align: center;">
+                            <a href="https://wescale.welcomekit.co" class="job-button" style="padding: 10px;">
+                                <i class="fa fa-external-link" aria-hidden="true"></i> Découvrir nos offres</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
