--- a/index.html
+++ b/index.html
@@ -189,39 +189,33 @@ class: home
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
-                    <h1 class="title"><a id="rejoignez-nous" href="#rejoignez-nous" data-toggle="modal"
-                                         data-target="#rejoignez-nous-modal">Rejoignez nous !</a></h1>
-                    <p><a id="rejoignez-nous-2" href="#rejoignez-nous" data-toggle="modal"
-                          data-target="#rejoignez-nous-modal">Envie de vous renouveler ? Rejoignez les Scalers !</a></p>
+                    <h1 class="title"><a id="rejoignez-nous" href="{{"/recrutement.html"| relative_url }}">Rejoignez
+                        nous !</a></h1>
+                    <p><a id="rejoignez-nous-2" href="{{"/recrutement.html"| relative_url }}">Envie de vous renouveler ?
+                        Rejoignez les Scalers !</a></p>
                 </div>
                 <div class="col-xs-12 col-md-4">
                     <h2>
-                        <a id="rejoignez-nous-6" href="#rejoignez-nous" data-toggle="modal"
-                           data-target="#rejoignez-nous-modal">
+                        <a id="rejoignez-nous-6" href="{{"/recrutement.html"| relative_url }}">
                             Cloud <span class="bold">Designer</span>
                         </a></h2>
-                    <a id="rejoignez-nous-3" href="#rejoignez-nous" data-toggle="modal"
-                       data-target="#rejoignez-nous-modal">
+                    <a id="rejoignez-nous-3" href="{{"/recrutement.html"| relative_url }}">
                         <img src="{{"/images/cloud-designer.png"| relative_url }}" alt="Cloud Designer" /></a>
-                    <p><a id="rejoignez-nous-7" href="#rejoignez-nous" data-toggle="modal"
-                          data-target="#rejoignez-nous-modal">
+                    <p><a id="rejoignez-nous-7" href="{{"/recrutement.html"| relative_url }}">
                         Vous avez une appétence pour l’analyse des besoins business et des enjeux stratégiques, de
                         solides bases techniques Cloud pour être à même de proposer des processus et des architectures
                         réalistes, bâties pour tenir et durer.</a></p>
                 </div>
                 <div class="col-xs-12 col-md-4">
                     <h2>
-                        <a id="rejoignez-nous-8" href="#rejoignez-nous" data-toggle="modal"
-                           data-target="#rejoignez-nous-modal">
+                        <a id="rejoignez-nous-8" href="{{"/recrutement.html"| relative_url }}">
                             Cloud <span class="bold">Builder</span
                         ></a>
                     </h2>
-                    <a id="rejoignez-nous-4" href="#rejoignez-nous" data-toggle="modal"
-                       data-target="#rejoignez-nous-modal">
+                    <a id="rejoignez-nous-4" href="{{"/recrutement.html"| relative_url }}">
                         <img src="{{"/images/cloud-builder.png"| relative_url }}" alt="Cloud Builder" /></a>
                     <p>
-                        <a id="rejoignez-nous-9" href="#rejoignez-nous" data-toggle="modal"
-                           data-target="#rejoignez-nous-modal">
+                        <a id="rejoignez-nous-9" href="{{"/recrutement.html"| relative_url }}">
                             Vous connaissez les briques utiles au fonctionnement d'un SI ou d'une usine logicielle. Vous
                             aimez les
                             approches orientées services. Vous êtes bilingues DevOps. Venez construire et mettre en
@@ -230,17 +224,14 @@ class: home
                 </div>
                 <div class="col-xs-12 col-md-4">
                     <h2>
-                        <a id="rejoignez-nous-10" href="#rejoignez-nous" data-toggle="modal"
-                           data-target="#rejoignez-nous-modal">
+                        <a id="rejoignez-nous-10" href="{{"/recrutement.html"| relative_url }}">
                             Cloud <span class="bold">Runner</span>
                         </a>
                     </h2>
-                    <a id="rejoignez-nous-5" href="#rejoignez-nous" data-toggle="modal"
-                       data-target="#rejoignez-nous-modal">
+                    <a id="rejoignez-nous-5" href="{{"/recrutement.html"| relative_url }}">
                         <img src="{{"/images/cloud-runner.png"| relative_url }}" alt="Cloud Runner" /></a>
                     <p>
-                        <a id="rejoignez-nous-11" href="#rejoignez-nous" data-toggle="modal"
-                           data-target="#rejoignez-nous-modal">
+                        <a id="rejoignez-nous-11" href="{{"/recrutement.html"| relative_url }}">
                             Vous êtes un pro du système, de l'automatisation, du monitoring et du réseau. Vous avez le
                             goût des
                             prods bien huilées et sécurisées. Vous aimez les architectures qui en imposent.
@@ -248,7 +239,6 @@ class: home
                         </a>
                     </p>
                 </div>
-                {% include wescale-recrute.html %}
             </div>
 
         </div>
