Display join button in left bar

--- a/recrutement.html
+++ b/recrutement.html
@@ -50,7 +50,10 @@ class: job
 </section>
 <section class="side-image" id="rejoindre-wescale">
                 <div class="col-md-4 visible-lg-block visible-md-block image-holder-left">
-                    <div class="welcome-box">
+                    <div class="welcome-box job-profils">
+
+                        <a href="https://wescale.welcomekit.co" class="job-button" style="margin-top: 45vh; padding: 10px;">
+                                <i class="fa fa-external-link" aria-hidden="true"></i> Découvrir nos offres</a>
 
                     </div>
                 </div>
@@ -113,7 +116,7 @@ class: job
                         </div>
                     </div>
                     <div class="row job-profils">
-                        <div class="col-md-12 col-xs-12" style="padding-bottom: 20px;text-align: center;">
+                        <div class="col-md-12 col-xs-12 visible-xs-block" style="padding-bottom: 20px;text-align: center;">
                             <a href="https://wescale.welcomekit.co" class="job-button" style="padding: 10px;">
                                 <i class="fa fa-external-link" aria-hidden="true"></i> Découvrir nos offres</a>
                         </div>
