--- a/recrutement.html
+++ b/recrutement.html
@@ -66,8 +66,8 @@ class: job
                         <div style="float: left;">
                             <div class="icon-holder"> <i class="fa fa-heartbeat" aria-hidden="true"></i> </div>
                             <div class="icon-text">
-                                <h3>Faire vivre sa passion,</h3>
-                                    <p>avec d'autres fous de cloud, d'automatisation, bref de
+                                <h3>Vivre</h3>
+                                    <p>sa passion, avec d'autres fous de cloud, d'automatisation, bref de
                                     développement
                                     d'infrastructures pour qui mettre en production le vendredi est la norme.
                             </p></div>
@@ -77,20 +77,31 @@ class: job
                         <div class="icon-holder"> <i class="fa fa-share-alt" aria-hidden="true"></i> </div>
                         <div class="icon-text">
                             <h3>Partager</h3>
-                                <p>son aventure et son expérience à toutes les occasions. Une fois par mois
-                                lors du
-                                WeShare toute l'équipe se retrouve pendant une journée pour échanger, se former et s'amuser.
-                                Mais c'est aussi écrire des articles, suivre et donner des conférences et participer à des
-                                meetups.
+                                <p>son aventure et son expérience à toutes les occasions. Mais c'est aussi écrire des articles, suivre et donner des conférences et participer à des
+                                meetups. Une fois par mois lors du <b>WeShare</b> toute l'équipe se retrouve pendant une journée pour <b>échanger</b>, se <b>former</b> et <b>s'amuser</b>.
                         </p></div>
                     </div>
                     </div>
                     <div class="row">
                         <div class="col-md-6 col-xs-12">
+                            <div class="icon-holder"> <i class="fa fa-magic" aria-hidden="true"></i> </div>
+                            <div class="icon-text">
+                                <h3>Décider</h3>
+                                    <p>de la destinée de sa société. Nous avons une culture d'entreprise forte de
+                                    <b>transparence</b> et de <b>collaboration</b>. Parce que nous n'avons pas la prétention d'être parfait,
+                                    nous
+                                    cherchons tous ensemble à nous améliorer et plus généralement, à <b>améliorer la vie</b>
+                                    chez
+                                    Wescale.
+                                    Chacun a son mot à dire et tout le monde est écouté. Notre but est de grandir et de nous
+                                    épanouir ensemble.
+                            </p></div>
+                        </div>
+                        <div class="col-md-6 col-xs-12">
                             <div class="icon-holder"> <i class="fa fa-smile-o" aria-hidden="true"></i> </div>
                             <div class="icon-text">
                                 <h3>S'amuser !</h3>
-                                    <p>Nous passons suffisament de temps dans notre vie à
+                                    <p>car nous passons suffisament de temps dans notre vie à
                                     travailler. Pas question pour nous de le passer à être triste et soucieux. Nous nous
                                     retrouvons
                                     régulièrement lors des <b>WeNight</b> pour découvrir de nouveaux bars insolites de la
@@ -98,20 +109,6 @@ class: job
                                     Une fois par an, nous nous réunissons aussi en séminaire pour développer de nouvelles
                                     compétences
                                     avec les <b>GO de Marrakech</b> et d'ailleurs.
-                            </p></div>
-                        </div>
-                        <div class="col-md-6 col-xs-12">
-                            <div class="icon-holder"> <i class="fa fa-magic" aria-hidden="true"></i> </div>
-                            <div class="icon-text">
-                                <h3>Décider</h3>
-                                    <p>de la destinée de sa société. Nous avons une culture d'entreprise forte de
-                                    transparence et de collaboration. Parce que nous n'avons pas la prétention d'être parfait,
-                                    nous
-                                    cherchons tous ensemble à nous <b>améliorer</b> et plus généralement, à <b>améliorer la vie
-                                    chez
-                                    Wescale</b>.
-                                    Chacun a son mot à dire et tout le monde est écouté. Notre but est de grandir et de nous
-                                    épanouir ensemble.
                             </p></div>
                         </div>
                     </div>
