change text form and add text

--- a/recrutement.html
+++ b/recrutement.html
@@ -18,14 +18,15 @@ class: job
             <div class="row">
                 <div class="col-md-offset-1 col-md-10 history">
                     <p>
-                        WeScale en quelques mots, c’est une société de conseil dédiée au
-                        cloud computing, avec un esprit startup !<br>
-                        Nous sommes réunis par la passion et l'envie de partager nos connaissances à travers nos
-                        missions, nos publications (blog, TechTrends), nos conférences, bref notre travail quotidien.
+                        WeScale est une société de conseil dédiée au cloud computing, avec un esprit startup !<br>
+                        Mais c’est avant tout une équipe de passionnés, chacun par ses sujets qu’ils soient techniques ou non, qui accompagne, avec un brin de folie, ses clients dans la réalisation de leurs projets.
                     </p>
                     <p>
-                        Rejoindre la WeTribu, c'est participer à une aventure humaine, relever des défis, apprendre
-                        chaque jour, mais aussi s'amuser.
+                        Depuis la création de WeScale en 2015, nous partageons nos connaissances à travers nos missions, nos publications (blog, TechTrends), nos conférences, mais surtout nous nous retrouvons autour d’une vision commune : “Cloud Experts”.
+                    </p>
+                    <p>
+                        Rejoindre WeScale, c'est participer à une aventure humaine, relever des défis, apprendre chaque jour, mais aussi s'amuser.<br>
+                        Entrez dans la #WeTribu !
                     </p>
                      <p class="more">
                     <a href="#" id="nous-rejoindre">
@@ -78,7 +79,7 @@ class: job
                         <div class="icon-text">
                             <h3>Partager</h3>
                                 <p>son aventure et son expérience à toutes les occasions. Mais c'est aussi écrire des articles, suivre et donner des conférences et participer à des
-                                meetups. Une fois par mois lors du <b>WeShare</b> toute l'équipe se retrouve pendant une journée pour <b>échanger</b>, se <b>former</b> et <b>s'amuser</b>.
+                                meetups. Une fois par mois lors du <b>WeShare</b> toute l'équipe se retrouve pendant une journée pour <b>échanger</b>, <b>se former</b> et <b>s'amuser</b>.
                         </p></div>
                     </div>
                     </div>
