--- a/recrutement.html
+++ b/recrutement.html
@@ -18,15 +18,19 @@ class: job
             <div class="row">
                 <div class="col-md-offset-1 col-md-10 history">
                     <p>
-                        WeScale est une société de conseil dédiée au cloud computing, avec un esprit startup !<br>
-                        Mais c’est avant tout une équipe de passionnés, chacun par ses sujets qu’ils soient techniques ou non, qui accompagne, avec un brin de folie, ses clients dans la réalisation de leurs projets.
+                        <b>WeScale</b> est une société de conseil dédiée au cloud computing, avec un esprit startup !
                     </p>
                     <p>
-                        Depuis la création de WeScale en 2015, nous partageons nos connaissances à travers nos missions, nos publications (blog, TechTrends), nos conférences, mais surtout nous nous retrouvons autour d’une vision commune : “Cloud Experts”.
+                        Mais c’est avant tout une équipe de <b>passionnés</b>, chacun par ses sujets qu’ils soient techniques ou non, qui accompagne, avec un brin de folie, ses clients dans la réalisation de leurs projets.
                     </p>
                     <p>
-                        Rejoindre WeScale, c'est participer à une aventure humaine, relever des défis, apprendre chaque jour, mais aussi s'amuser.<br>
-                        Entrez dans la #WeTribu !
+                        Depuis la création de WeScale en <b>2015</b>, nous partageons nos connaissances à travers nos missions, nos publications (blog, TechTrends), nos conférences, mais surtout nous nous retrouvons autour d’une vision commune : “<b>Cloud Experts</b>”.
+                    </p>
+                    <p>
+                        Rejoindre WeScale, c'est participer à une aventure humaine, relever des défis, apprendre chaque jour, mais aussi s'amuser.
+                    </p>
+                    <p>    
+                        Entrez dans la <b>#WeTribu</b> !
                     </p>
                      <p class="more">
                     <a href="#" id="nous-rejoindre">
